--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-node_modules/*
+node_modules/
+yarn.lock
+pnpm-lock.yaml
+dist
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+/frontend/npm-debug.log*
+/backend/npm-debug.log*
+.vscode/
+.idea/
+*.log
