--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.3",
