--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URL=mongodb+srv://<db_username>:<db_password>@caresync.tc6eo.mongodb.net/?retryWrites=true&w=majority&appName=CareSync
+DB_URL=mongodb+srv://leahjones1403:yX0zvRKMf5jBWwv7@caresync.tc6eo.mongodb.net/CareSync?retryWrites=true&w=majority&appName=CareSync
 PORT=4000
